<resources>
    <string name="app_name">Oscar</string>
    <string name="best_picture">Best Picture</string>
    <string name="best_actor">Best Actor</string>
    <string name="best_actress">Best Actress</string>
    <string name="film_editing">Film Editing</string>
    <string name="visual_effects">Visual Effects</string>
    <string name="nominee_hint">Enter nominee here</string>
    <string name="review_hint">Enter review here</string>
</resources>
